zipkin/openshift/resources.yaml
#########################
##  DEPLOYMENT CONFIG  ##
#########################
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  replicas: 1
  selector:
    app: zipkin
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: zipkin
    spec:
      containers:
      - image: docker.io/openzipkin/zipkin
        imagePullPolicy: Always
        name: zipkin
        ports:
        - containerPort: 9411
          protocol: TCP
        resources: {}
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange

---

#########################
##       SERVICE       ##
########################
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: 80-9411
    port: 80
    protocol: TCP
    targetPort: 9411
  selector:
    app: zipkin
  sessionAffinity: None
  type: LoadBalancer

---

#########################
##        ROUTE        ##
#########################
apiVersion: v1
kind: Route
metadata:
  labels:
    app: zipkin
  name: zipkin
spec:
  port:
    targetPort: 80-9411
  to:
    kind: Service
    name: zipkin
  wildcardPolicy: None
